--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -5,7 +5,7 @@ $font-size: 16px;
 $accent-color: #004e7c;
 $primary-color: #fff0be;
 $info-color: #3f83cc;
-$success-color: #edc7b7;
+$success-color: #ff814b;
 $secondary-color: #007cc7;
 $light-color: #4da8da;
 $white-color: #f9f9f9;
