--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -2,13 +2,13 @@
 	<div class="header-top">
 		<h1 class="logo">
 			<a href="/admin">
-				<img src="/img/admin/top_logo.jpg" alt="icon">
+				<img src="/img/admin/top_logo.jpg" alt="logo">
 			</a>
 		</h1>
-		<a href="/" class="navi btn btn-success">
-			사이트로 바로가기
+		<a href="/" class="btn btn-success">
+			사이트 바로가기
 		</a>
-		<a href="/admin/auth/logout" class="navi btn btn-secondary">
+		<a href="/admin/auth/logout" class="btn btn-secondary">
 			로그아웃
 		</a>
 	</div>
