--- a/views/inc/pager.ejs
+++ b/views/inc/pager.ejs
@@ -2,27 +2,29 @@
 <div class="pager-wrapper">
 	<ul class="pager-wrap">
 		<li class="pager pager-first">
-			<a href="/<%= LANG %>/book/1" class="material-icons">first_page</a>
+			<a href="/<%=secondPath%>/1" class="material-icons">first_page</a>
 		</li>
 		<li class="pager pager-prev-set">
-			<a href="/<%= LANG %>/book/<%= prevPager %>" class="material-icons">keyboard_double_arrow_left</a>
+			<a href="<%=secondPath%>/<%= prevPager %>" class="material-icons">keyboard_double_arrow_left</a>
 		</li>
 		<li class="pager pager-prev">
-			<a href="/<%= LANG %>/book/<%= prevPage %>" class="material-icons">chevron_left</a>
+			<a href="<%=secondPath%>/<%= prevPage %>" class="material-icons">chevron_left</a>
 		</li>
 		<% for(let i=startPage; i<=endPage; i++) { %>
 			<li class="pager <%= page === i ? 'active' : '' %>">
-				<a href="/<%= LANG %>/book/<%= i %>"><%= i %></a>
+				<a href="<%=secondPath%>/<%= i %>">
+					<%= i %>
+				</a>
 			</li>
-		<% } %>
-		<li class="pager pager-next">
-			<a href="/<%= LANG %>/book/<%= nextPage %>" class="material-icons">chevron_right</a>
-		</li>
-		<li class="pager pager-next-set">
-			<a href="/<%= LANG %>/book/<%= nextPager %>" class="material-icons">keyboard_double_arrow_right</a>
-		</li>
-		<li class="pager pager-last">
-			<a href="/<%= LANG %>/book/<%= totalPage %>" class="material-icons">last_page</a>
-		</li>
+			<% } %>
+				<li class="pager pager-next">
+					<a href="<%=secondPath%>/<%= nextPage %>" class="material-icons">chevron_right</a>
+				</li>
+				<li class="pager pager-next-set">
+					<a href="<%=secondPath%>/<%= nextPager %>" class="material-icons">keyboard_double_arrow_right</a>
+				</li>
+				<li class="pager pager-last">
+					<a href="<%=secondPath%>/<%= totalPage %>" class="material-icons">last_page</a>
+				</li>
 	</ul>
 </div>
