--- a/views/admin/user/user-form.ejs
+++ b/views/admin/user/user-form.ejs
@@ -32,7 +32,6 @@
                 <input type="text" name="tel2" class="form-control" style="max-width: 80px;">
                 <span class="px-2">-</span>
                 <input type="text" name="tel3" class="form-control" style="max-width: 80px;">
-                <input type="text" name="tel" class="form-control" placeholder="전화번호(필수사항)">
               </td>
             </tr>
             <tr>
@@ -48,7 +47,6 @@
             </tr>
             <tr>
               <td>
-                <hr>
                 <input type="text" name="AddrLegacy" class="form-control mb-2" readonly>
                 <input type="text" name="AddrLoad" class="form-control mb-2" readonly>
                 <input type="text" name="AddrDetail" class="form-control" readonly>
@@ -56,7 +54,7 @@
             </tr>
             <tr>
               <td colspan="2" class="text-center">
-                <button class="btn btn-secondary">수정</button>
+                <button class="btn btn-success">수정</button>
                 <a href="/admin/user" class="btn btn-secondary">리스트</a>
               </td>
             </tr>
