--- a/views/board/list-gallery.ejs
+++ b/views/board/list-gallery.ejs
@@ -1,14 +1,13 @@
-<link rel="stylesheet" href="/css/board-gallery.css">
-<article class="board-container gallery-container">
+<link rel="stylesheet" href="/css/board.css">
+<article class="board-container gallery-type list-page">
   <ul class="list-wrap">
-    <li class="list"></li>
-    <li class="list"></li>
-    <li class="list"></li>
-    <li class="list"></li>
-    <li class="list"></li>
-    <li class="list"></li>
-    <li class="list"></li>
-    <li class="list"></li>
+    <li class="list" data-link="/admin/board/1">
+      <div class="img-wrap" style="background-image: url(/img/team1.jpg);"></div>
+      <div class="content-wrap">
+        <div class="title">우리회사 팀원</div>
+      </div>
+    </li>
   </ul>
   <%- // include('../inc/pager.ejs') %>
 </article>
+<script src="/js/board/board.js"></script>
