--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -1,30 +1,30 @@
-<header class="header-wrapper">
-	<div class="header-top">
-		<h1 class="logo">
-			<a href="/admin">
-				<img src="/img/admin/top_logo.jpg" alt="logo">
+	<header class="header-wrapper">
+		<div class="header-top">
+			<h1 class="logo">
+				<a href="/admin">
+					<img src="/img/admin/top_logo.jpg" alt="logo">
+				</a>
+			</h1>
+			<a href="/" class="btn btn-success">
+				사이트 바로가기
 			</a>
-		</h1>
-		<a href="/" class="btn btn-success">
-			사이트 바로가기
-		</a>
-		<a href="/admin/auth/logout" class="btn btn-secondary">
-			로그아웃
-		</a>
-	</div>
-	<nav class="navi-wrap">
-		<% for(let v of links.main) { %>
-			<a href="<%= v.path %>" class="navi" <%=(v.target ? `target="${v.target}" ` : '' ) %>>
-				<% if(secondPath===v.path2) { %>
-					<img src="/img/admin/<%= v.src %>_on.jpg" alt="icon">
-					<% } else { %>
-						<img src="/img/admin/<%= v.src %>.jpg" alt="icon">
-						<% } %>
+			<a href="/admin/auth/logout" class="btn btn-secondary">
+				로그아웃
+			</a>
+		</div>
+		<nav class="navi-wrap">
+			<% for(let v of init.main) { %>
+			<a href="<%= v.link %>" class="navi" <%=(v.target ? `target="${v.target}" ` : '' ) %>>
+				<% if(v.path.includes(second)) { %>
+				<img src="/img/admin/<%= v.src %>_on.jpg" alt="icon" class="mw-100">
+				<% } else { %>
+				<img src="/img/admin/<%= v.src %>.jpg" alt="icon" class="mw-100">
+				<% } %>
 			</a>
 			<% } %>
-	</nav>
-	<%- include('./tab.ejs') %>
-</header>
-<script>
+		</nav>
+		<%- include('./tab.ejs') %>
+	</header>
+	<script>
 
-</script>
+	</script>
