--- a/public/scss/admin/admin-prd.scss
+++ b/public/scss/admin/admin-prd.scss
@@ -8,6 +8,7 @@
     table {
       text-align: center;
       td {
+        vertical-align: middle;
         &:nth-child(1) {
           width: 10%;
         }
