--- a/public/scss/admin/admin-order.scss
+++ b/public/scss/admin/admin-order.scss
@@ -1,1 +1,53 @@
 @import '../common';
+@import '../common';
+
+.order-wrapper {
+  &.list-wrapper {
+    .btn-wrap {
+      padding: 1em 0 0.5em 0;
+    }
+
+    table {
+      text-align: center;
+
+      td {
+        vertical-align: middle;
+        border: 1px solid #ededed;
+
+        &:nth-child(1) {
+          width: 65px;
+        }
+
+        &:nth-child(2) {
+          width: 160px;
+        }
+
+        &:nth-child(3) {
+          width: 130px;
+        }
+
+        &:nth-child(5) {
+          width: 120px;
+        }
+
+        &:nth-child(6) {
+          width: 170px;
+        }
+      }
+    }
+  }
+
+  &.form-wrapper {
+    table.tbl-prd {
+      td.td-icon {
+        padding: 0.25em;
+        width: 120px;
+        height: 80px;
+        img {
+          max-width: 100%;
+          max-height: 100%;
+        }
+      }
+    }
+  }
+}
