--- a/views/admin/user/user-form.ejs
+++ b/views/admin/user/user-form.ejs
@@ -1,73 +1,78 @@
 <%- include('../../inc/head.ejs') %>
-  <%- include('../../inc/header.ejs') %>
-    <section class="user-wrapper update-wrapper wrapper">
-      <form name="updateForm" method="POST">
-        <input type="hidden" name="_method" value="PUT">
-        <table class="user-tbl table">
-          <tbody>
-            <tr>
-              <td class="title">아이디</td>
-              <td class="content">
-                <b>woojungyang</b>
-              </td>
-            </tr>
-            <tr>
-              <td class="title">이름</td>
-              <td class="content">
-                <input type="text" name="username" class="form-control" placeholder="이름(필수사항)" style="max-width:200px;">
-              </td>
-            </tr>
-            <tr>
-              <td class="title">전화번호</td>
-              <td class="content form-inline">
-                <select name="tell" class="form-control" style="max-width:100px;">
-                  <option value="">선택</option>
-                  <% for(let v of telNumber){ %>
-                    <option value=" <%= v %> ">
-                      <%= v %>
-                    </option>
-                    <% } %>
-                </select>
-                <span class="px-2">-</span>
-                <input type="text" name="tel2" class="form-control" style="max-width: 80px;">
-                <span class="px-2">-</span>
-                <input type="text" name="tel3" class="form-control" style="max-width: 80px;">
-              </td>
-            </tr>
-            <tr>
-              <td class="title">이메일</td>
-              <td class="content"><input type="text" name="email" class="form-control"></td>
-            </tr>
-            <tr>
-              <td class="title" rowspan="2">주소</td>
-              <td class="content form-inline">
-                <input type="text" name="AddrPost" class="form-control mr-2" readonly style="max-width:120px;">
-                <button class="btn btn-primary">우편번호 찾기</button>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <input type="text" name="AddrLegacy" class="form-control mb-2" readonly>
-                <input type="text" name="AddrLoad" class="form-control mb-2" readonly>
-                <input type="text" name="AddrDetail" class="form-control" readonly>
-              </td>
-            </tr>
-            <tr>
-              <td colspan="2" class="text-center">
-                <button class="btn btn-success">수정</button>
-                <a href="/admin/user" class="btn btn-secondary">리스트</a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </form>
-      <div class="btn-wrap">
+<%- include('../../inc/header.ejs') %>
+<section class="user-wrapper update-wrapper wrapper">
+  <form name="updateForm" method="POST">
+    <input type="hidden" name="_method" value="PUT">
+    <table class="user-tbl table">
+      <tbody>
+        <tr>
+          <td class="title">아이디</td>
+          <td class="content">
+            <b>woojungyang</b>
+          </td>
+        </tr>
+        <tr>
+          <td class="title">이름</td>
+          <td class="content">
+            <input type="text" name="username" class="form-control" placeholder="이름(필수사항)" style="max-width:200px;">
+          </td>
+        </tr>
+        <tr>
+          <td class="title">전화번호</td>
+          <td class="content form-inline">
+            <select name="tell" class="form-control" style="max-width:100px;">
+              <option value="">선택</option>
+              <% for(let v of telNumber){ %>
+              <option value=" <%= v %> ">
+                <%= v %>
+              </option>
+              <% } %>
+            </select>
+            <span class="px-2">-</span>
+            <input type="text" name="tel2" class="form-control" style="max-width: 80px;">
+            <span class="px-2">-</span>
+            <input type="text" name="tel3" class="form-control" style="max-width: 80px;">
+          </td>
+        </tr>
+        <tr>
+          <td class="title">이메일</td>
+          <td class="content"><input type="text" name="email" class="form-control"></td>
+        </tr>
+        <tr>
+          <td class="title" rowspan="2">주소</td>
+          <td class="content form-inline">
+            <input type="text" name="AddrPost" class="form-control mr-2" readonly style="max-width:120px;">
+            <button class="btn btn-primary">우편번호 찾기</button>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <input type="text" name="AddrLegacy" class="form-control mb-2" readonly>
+            <input type="text" name="AddrLoad" class="form-control mb-2" readonly>
+            <input type="text" name="AddrDetail" class="form-control" readonly>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2" class="text-center">
+            <button class="btn btn-success">수정</button>
+            <a href="/admin/user" class="btn btn-secondary">리스트</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </form>
+  <div class="btn-wrap">
 
-      </div>
-    </section>
-    <%- include('../../inc/foot.ejs') %>
+  </div>
+</section>
+<%- include('../../inc/foot.ejs') %>
 
-      <!--
+<!--
       HTTP안에서는 POST로 전송이 되지만 METHOD-OVERRIDE(method-mw.js 파일로 전송.) 요청사항에 바디에 존재해야하고 req.body안에 _method가 존재한다면, 
     이 값을 찾은 후 => put을 값을 기입하고 post전송은 삭제되고 put method로 변경시킴.  -> router에 있는 put 라우터로 전송된다.
+
+    method-override?
+      CRUD의 대부분은  VIEW에서 <form>이나 <a>태그를 통해 요청을 보내고 router가 요청을 읽어서 그에 맞는 경로를 통해 응답해준다.
+      하지만, 위의 태그의 메소드(전송방식)에는 "POST"와 "GET"뿐이기에 생성, 읽기 작업 밖에 할 수없다.
+      업데이트와 삭제 작업을 하기위해 요청 메소드 GET,POST를 PUT(수정) 혹은 DELETE(삭제)로 매핑시켜주는 npm module이다.
    -->
