--- a/views/admin/order/order-list.ejs
+++ b/views/admin/order/order-list.ejs
@@ -21,15 +21,15 @@
       <tr>
         <td>1</td>
         <td>
-          <a href="/admin/order/1">20211029-1234567</a>
+          <a href="/<%= currents[0] %>/order/1">20211029-123657</a>
         </td>
         <td class="text-left">
-          <a href="/admin/user/user?id=1">
+          <a href="/<%= currents[0] %>/user?id=1">
             woojungayng
           </a>
         </td>
         <td class="text-left">
-          <a href="/admin/prd?id=1,2,3">맛있는 아이스크림 외 1종</ㅁ>
+          <a href="/<%= currents[0] %>/prd?id=1,2,3">맛있는 아이스크림 외1종</a>
         </td>
         <td class="text-right">
           <div class="">20,500원</div>
@@ -48,8 +48,8 @@
           </select>
         </td>
         <td>
-          <a href="/admin/order/1" class="btn btn-success btn-sm">수정</a>
-          <a href="/admin/order/1" class="btn btn-danger btn-sm">삭제</a>
+          <a href="/<%= currents[0] %>/order/1" class="btn btn-success btn-sm">수정</a>
+          <a href="/<%= currents[0] %>/order/1" class="btn btn-danger btn-sm">삭제</a>
         </td>
       </tr>
     </tbody>
