--- a/views/admin/user/user-list.ejs
+++ b/views/admin/user/user-list.ejs
@@ -1,38 +1,58 @@
 <%- include('../../inc/head.ejs') %>
-  <%- include('../../inc/header.ejs') %>
-    <section class="user-wrapper list-wrapper wrapper">
-      <table class="user-tbl table table-sm text-center border-bottom">
-        <thead>
-          <tr>
-            <th>번호</th>
-            <th>아이디</th>
-            <th>이름</th>
-            <th>이메일</th>
-            <th>전화번호</th>
-            <th>구분</th>
-            <th>관리</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td rowspan="2">1</td>
-            <td><a href = "/admin/user/1">woojungyang</a></td>
-            <td>양우정</td>
-            <td>woojungyang1113@gmail.com</td>
-            <td>01094778896</td>
-            <td>일반</td>
-            <td rowspan="2">
-              <a href="/admin/user/1" class="btn btn-success">수정</a>
-              <a href="" class="btn btn-danger">삭제</a>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="5" class="text-left">
-              <b>주소: </b>
-              [123456] 서울시 마포구 노고산동123 4층
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
+<%- include('../../inc/header.ejs') %>
+<section class="user-wrapper list-wrapper wrapper">
+  <div class="my-2 d-flex">
+    <%- include('../../inc/search.ejs') %>
+    <%- include('../../inc/sort.ejs') %>
+    <a href="/<%= currents[0] %>/<%= currents[1] %>?type=create" class="btn btn-primary ml-auto">회원등록</a>
+  </div>
+  <table class="user-tbl table table-sm text-center border-bottom">
+    <thead>
+      <tr>
+        <th>번호</th>
+        <th>아이디</th>
+        <th>이름</th>
+        <th>이메일</th>
+        <th>전화번호</th>
+        <th>구분</th>
+        <th>관리</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% for(let v of users) { %>
+      <tr>
+        <td rowspan="2"><%= v.id %></td>
+        <td>
+          <a href="/<%= currents[0] %>/<%= currents[1] %>/<%= v.id %>"><%= v.userid %></a>
+        </td>
+        <td><%= v.username %></td>
+        <td><%= v.email %></td>
+        <td><%= v.tel %></td>
+        <td><%= v.level %></td>
+        <td rowspan="2">
+          <a href="/<%= currents[0] %>/<%= currents[1] %>/<%= v.id %>" class="btn btn-success">수정</a>
+          <form action="/<%= currents[0] %>/<%= currents[1] %>" method="POST" class="d-inline-block">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="hidden" name="id" value="<%= v.id %>">
+            <button class="btn btn-danger">삭제</button>
+          </form>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="5" class="text-left">
+          <div>
+            도로명주소 : <%- v.addr1 %>
+          </div>
+          <div>
+            지번명주소 : <%- v.addr2 %>
+          </div>
+        </td>
+      </tr>
+      <% } %>
+    </tbody>
+  </table>
+  <div class="pager-wrap">
+    <%- include('../../inc/pager.ejs', pager) %>
+  </div>
+</section>
 <%- include('../../inc/foot.ejs') %>
