--- a/views/board/list-default.ejs
+++ b/views/board/list-default.ejs
@@ -14,7 +14,7 @@
       <tr>
         <td>1</td>
         <td class="text-left">
-          <a href="/admin/board/1?type=default">공지사항 입니다.</a>
+          <a href="/<%= currents[0] %>/board/1?type=default">공지사항 입니다.</a>
         </td>
         <td>관리자</td>
         <td>2021-10-28</td>
@@ -23,8 +23,8 @@
     </tbody>
   </table>
   <%- // include('../inc/pager.ejs') %>
-    <div class="text-center my-4">
-    <a href="/admin/board?type=create" class="btn btn-primary">글작성</a>
+  <div class="text-center my-4">
+    <a href="/<%= currents[0] %>/board?type=create" class="btn btn-primary">글작성</a>
   </div>
 </article>
 <script src="/js/board/board.js"></script>
