--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -1,14 +1,14 @@
 	<header class="header-wrapper">
 		<div class="header-top">
 			<h1 class="logo">
-				<a href="/admin">
-					<img src="/img/admin/top_logo.jpg" alt="logo">
+				<a href="/<%= currents[0] %>">
+					<img src="/img/<%= currents[0] %>/top_logo.jpg" alt="logo">
 				</a>
 			</h1>
 			<a href="/" class="btn btn-success">
 				사이트 바로가기
 			</a>
-			<a href="/admin/auth/logout" class="btn btn-secondary">
+			<a href="/<%= currents[0] %>/auth/logout" class="btn btn-secondary">
 				로그아웃
 			</a>
 		</div>
@@ -16,9 +16,9 @@
 			<% for(let v of init.main) { %>
 			<a href="<%= v.link %>" class="navi" <%=(v.target ? `target="${v.target}" ` : '' ) %>>
 				<% if(v.path.includes(second)) { %>
-				<img src="/img/admin/<%= v.src %>_on.jpg" alt="icon" class="mw-100">
+				<img src="/img/<%= currents[0] %>/<%= v.src %>_on.jpg" alt="icon" class="mw-100">
 				<% } else { %>
-				<img src="/img/admin/<%= v.src %>.jpg" alt="icon" class="mw-100">
+				<img src="/img/<%= currents[0] %>/<%= v.src %>.jpg" alt="icon" class="mw-100">
 				<% } %>
 			</a>
 			<% } %>
