--- a/public/scss/admin/admin-user.scss
+++ b/public/scss/admin/admin-user.scss
@@ -34,5 +34,19 @@
     }
   }
   &.update-wrapper {
+    td.require::before {
+      display: inline-block;
+      content: '*';
+      color: #f10;
+      margin-right: 0.5em;
+      font-size: 1.25em;
+    }
+    .valid {
+      padding-top: 0.5em;
+      color: #00559b;
+      &.error {
+        color: #a70404;
+      }
+    }
   }
 }
