--- a/views/admin/prd/prd-form.ejs
+++ b/views/admin/prd/prd-form.ejs
@@ -5,7 +5,7 @@
   <h4 class="title bullet my-2">
     상품 <%= (type === 'create' ? '생성' : '수정') %>
   </h4>
-  <form action="/admin/prd" method="post" enctype="multipart/form-data">
+  <form action="/<%= currents[0] %>/prd" method="post" enctype="multipart/form-data">
     <input type="hidden" name="id" value="1">
     <input type="hidden" name="_method" value="PUT">
     <table class="table border-bottom">
@@ -52,7 +52,7 @@
       </tbody>
     </table>
     <div class="text-center my-4">
-      <a href="/admin/prd" class="btn btn-primary">리스트</a>
+      <a href="/<%= currents[0] %>/prd" class="btn btn-primary">리스트</a>
       <button class="btn btn-success float-right mx-1">수정</button>
       <button type="reset" class="btn btn-danger float-right mx-1">다시작성</button>
     </div>
