--- a/views/board/form-gallery.ejs
+++ b/views/board/form-gallery.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/board-default.css">
 <article class="board-container default-type view-page">
-  <form action="/admin/board" method="post" enctype="multipart/form-data">
+  <form action="/<%= currents[0] %>/board" method="post" enctype="multipart/form-data">
     <input type="hidden" name="id" value="1">
     <input type="hidden" name="_method" value="PUT">
     <table class="table border-bottom">
@@ -19,29 +19,32 @@
         </tr>
         <tr>
           <td colspan="2">
-            <textarea name="content" class="form-control" placeholder="내용을 입력하세요." style="min-height: 200px;"></textarea>
+            <textarea name="content" class="form-control" placeholder="내용을 입력하세요."
+              style="min-height: 200px;"></textarea>
           </td>
         </tr>
         <tr>
           <td>이미지 첨부</td>
           <td>
-            <% for(let i=1; i<=10; i++) { %> 
-              <input type="file" name="img" class="form-control-file mb-2">
+            <% for(let i=1; i<=10; i++) { %>
+            <input type="file" name="img" class="form-control-file mb-2">
             <% } %>
           </td>
         </tr>
         <tr>
           <td>파일 첨부</td>
           <td>
-            <% for(let i=1; i<=10; i++) { %> 
-              <input type="file" name="pds" class="form-control-file mb-2">
+            <% for(let i=1; i<=10; i++) { %>
+            <input type="file" name="pds" class="form-control-file mb-2">
             <% } %>
           </td>
         </tr>
       </tbody>
     </table>
-  <div class="text-center my-4">
-    <a href="/admin/board?type=create" class="btn btn-primary">글작성</a>
-  </div>
+    <div class="text-center my-4">
+      <a href="/<%= currents[0] %>/board?boardType=<%=boardType%>" class="btn btn-primary">리스트</a>
+      <button class="btn btn-success float-right mx-1">수정</button>
+      <button type="reset" class="btn btn-danger float-right mx-1">다시작성</button>
+    </div>
   </form>
 </article>
