--- a/views/board/view-default.ejs
+++ b/views/board/view-default.ejs
@@ -26,8 +26,9 @@
     </tbody>
   </table>
   <div class="tet-center my-4">
-    <a href="/admin/board?boardType=<%= boardType %>" class="float-left btn btn-primary">리스트</a>
-    <a href="/admin/board/1?boardType=<%=boardType%>&type=update" class="btn btn-success float-right mx-1">수정</a>
+    <a href="/<%= currents[0] %>/board?boardType=<%=boardType%>" class="btn btn-primary">리스트</a>
+    <a href="/<%= currents[0] %>/board/1?boardType=<%=boardType%>&type=update"
+      class="btn btn-success float-right mx-1">수정</a>
     <a href="#" class="btn btn-danger mx-1">삭제</a>
   </div>
 </article>
