--- a/views/inc/head.ejs
+++ b/views/inc/head.ejs
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="/css/all.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons">
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/css/admin-<%= currents[1] %>.css">
+	<link rel="stylesheet" href="/css/<%= currents[0] %>-<%= currents[1] %>.css">
 	<script src="/js/jquery.min.js"></script>
 	<script src="/js/moment.min.js"></script>
 	<script src="/js/lodash.min.js"></script>
