--- a/views/inc/pager.ejs
+++ b/views/inc/pager.ejs
@@ -2,29 +2,29 @@
 <div class="pager-wrapper">
 	<ul class="pager-wrap">
 		<li class="pager pager-first">
-			<a href="/<%=secondPath%>/1" class="material-icons">first_page</a>
+			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=1" class="material-icons">first_page</a>
 		</li>
 		<li class="pager pager-prev-set">
-			<a href="<%=secondPath%>/<%= prevPager %>" class="material-icons">keyboard_double_arrow_left</a>
+			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=<%= prevPager %>"
+				class="material-icons">keyboard_double_arrow_left</a>
 		</li>
 		<li class="pager pager-prev">
-			<a href="<%=secondPath%>/<%= prevPage %>" class="material-icons">chevron_left</a>
+			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=<%= prevPage %>" class="material-icons">chevron_left</a>
 		</li>
 		<% for(let i=startPage; i<=endPage; i++) { %>
-			<li class="pager <%= page === i ? 'active' : '' %>">
-				<a href="<%=secondPath%>/<%= i %>">
-					<%= i %>
-				</a>
-			</li>
-			<% } %>
-				<li class="pager pager-next">
-					<a href="<%=secondPath%>/<%= nextPage %>" class="material-icons">chevron_right</a>
-				</li>
-				<li class="pager pager-next-set">
-					<a href="<%=secondPath%>/<%= nextPager %>" class="material-icons">keyboard_double_arrow_right</a>
-				</li>
-				<li class="pager pager-last">
-					<a href="<%=secondPath%>/<%= totalPage %>" class="material-icons">last_page</a>
-				</li>
+		<li class="pager <%= page === i ? 'active' : '' %>">
+			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=<%= i %>"><%= i %></a>
+		</li>
+		<% } %>
+		<li class="pager pager-next">
+			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=<%= nextPage %>" class="material-icons">chevron_right</a>
+		</li>
+		<li class="pager pager-next-set">
+			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=<%= nextPager %>"
+				class="material-icons">keyboard_double_arrow_right</a>
+		</li>
+		<li class="pager pager-last">
+			<a href="/<%=currents[0]%>/<%=currents[1]%>?page=<%= totalPage %>" class="material-icons">last_page</a>
+		</li>
 	</ul>
 </div>
